page/macos.scss
/* use Digital Color Meter with sRGB mode to get correct color */
$panel-alpha: 0.8125;

/* light */
$panel-color-light: rgba(240, 240, 240, $panel-alpha);
$panel-border-color-light: rgb(0 0 0 / 17.5%);
$vertical-border-color-light: rgba(224, 224, 224, $panel-alpha);
$text-color-light: rgb(0 0 0 / 70%);
$label-color-light: rgb(128 128 128);

/* dark */
$panel-color-dark: rgba(60, 60, 60, $panel-alpha);
$panel-border-color-dark: rgb(0 0 0 / 47.5%);
$vertical-border-color-dark: rgba(85, 85, 85, $panel-alpha);
$text-color-dark: rgb(255 255 255 / 90%);
$label-color-dark: rgb(124 124 124);

/* accent color */
$light-blue: rgb(0 90 216);
$dark-blue: rgb(0 89 208);
$light-purple: rgb(125 42 126);
$dark-purple: rgb(128 52 130);
$light-pink: rgb(217 59 134);
$dark-pink: rgb(201 51 120);
$light-red: rgb(196 38 43);
$dark-red: rgb(209 53 57);
$light-orange: rgb(217 107 10);
$dark-orange: rgb(200 96 4);
$light-yellow: rgb(214 164 14);
$dark-yellow: rgb(209 158 0);
$light-green: rgb(76 160 50);
$dark-green: rgb(67 146 42);
$light-graphite: rgb(128 128 128);
$dark-graphite: rgb(105 105 105);

.macos {
  .panel, .contextmenu {
    border-width: 1px;
    border-style: solid;
    border-radius: 6px;
    background-clip: padding-box; /* make border alpha and content alpha independent */
    box-shadow: 0 10px 20px rgb(0 0 0 / 14%),
                0 0 25px rgb(0 0 0 / 12%);
  }

  .panel {
    transform: translate(25px, 25px); /* leave top and left for shadow */

    &:has(.horizontal .paging:is(.arrow, .scroll)) {
      border-start-end-radius: 15px;
      border-end-end-radius: 15px;
    }
  }

  .horizontal .paging.arrow {
    flex-direction: column;
    justify-content: center;

    .paging-inner {
      inline-size: 28px;
      block-size: auto;
    }
  }

  .paging.scroll {
    inline-size: 28px;
    justify-content: center;
    align-items: center;
  }

  .contextmenu {
    backdrop-filter: blur(16px);
  }

  .cursor.no-text {
    inline-size: 1px;
    block-size: 16px;
    margin-inline: 1px;
  }

  .candidate-inner, .preedit, .aux-up, .aux-down, .menu-item {
    min-block-size: 24px; /* compromise to 🀄's height */
    min-inline-size: 16px;

    /* combine min-block-size, min-inline-size and padding to make aux-up a square for 小 and A */
    padding-block: 3px;
    padding-inline: 7px;
    background-clip: padding-box;
  }

  .menu-item:hover {
    color: white;
  }

  /* Use a dedicated div because
   * 1. divider color is not overlaid by panel color
   * 2. divider may not be full-length
   */
  .hoverables.vertical .divider {
    block-size: 1px;

    .divider-middle {
      inline-size: 100%;
    }
  }

  .hoverables.horizontal .divider {
    inline-size: 0;

    &.divider-paging {
      inline-size: 1px;
    }

    .divider-middle {
      block-size: 100%;
    }
  }

  .label, .comment {
    font-size: 12px;
  }

  .horizontal-tb .horizontal .paging.arrow svg {
    transform: rotate(90deg);
  }

  .vertical-rl .horizontal .paging.arrow svg {
    transform: rotate(180deg);
  }

  .vertical-lr .horizontal .paging.arrow svg {
    transform: rotate(0deg);
  }
}

.macos.light {
  /* stylelint-disable-next-line no-descending-specificity */
  .panel, .contextmenu {
    border-color: $panel-border-color-light;
  }

  .cursor.no-text {
    background-color: $text-color-light;
  }

  /* stylelint-disable-next-line no-descending-specificity */
  .candidate, .header, .contextmenu {
    background-color: $panel-color-light;
  }

  .contextmenu {
    color: black;
  }

  .text, .header {
    color: $text-color-light;
  }

  .label, .comment {
    color: $label-color-light;
  }

  .paging {
    color: gray; // disabled
    background-color: $panel-color-light;

    .hoverable-inner {
      color: $text-color-light; // enabled
    }
  }

  &.blue {
    .hoverable.highlighted .hoverable-inner, .menu-item:hover {
      background-color: $light-blue;
    }
  }

  &.purple {
    .hoverable.highlighted .hoverable-inner, .menu-item:hover {
      background-color: $light-purple;
    }
  }

  &.pink {
    .hoverable.highlighted .hoverable-inner, .menu-item:hover {
      background-color: $light-pink;
    }
  }

  &.red {
    .hoverable.highlighted .hoverable-inner, .menu-item:hover {
      background-color: $light-red;
    }
  }

  &.orange {
    .hoverable.highlighted .hoverable-inner, .menu-item:hover {
      background-color: $light-orange;
    }
  }

  &.yellow {
    .hoverable.highlighted .hoverable-inner, .menu-item:hover {
      background-color: $light-yellow;
    }
  }

  &.green {
    .hoverable.highlighted .hoverable-inner, .menu-item:hover {
      background-color: $light-green;
    }
  }

  &.graphite {
    .hoverable.highlighted .hoverable-inner, .menu-item:hover {
      background-color: $light-graphite;
    }
  }

  .hoverables .divider {
    .divider-side {
      background-color: $panel-color-light;
    }

    .divider-middle {
      background-color: $vertical-border-color-light;
    }
  }

  .hoverables.horizontal-scroll .divider .divider-middle {
    background-color: $panel-color-light;
  }
}

.macos.dark {
  /* stylelint-disable-next-line no-descending-specificity */
  .panel, .contextmenu {
    border-color: $panel-border-color-dark;
  }

  .cursor.no-text {
    background-color: $text-color-dark;
  }

  /* stylelint-disable-next-line no-descending-specificity */
  .candidate, .header, .contextmenu {
    background-color: $panel-color-dark;
  }

  .contextmenu {
    color: white;
  }

  .text, .header {
    color: $text-color-dark;
  }

  .label, .comment {
    color: $label-color-dark;
  }

  .paging {
    color: gray; // disabled
    background-color: $panel-color-dark;

    /* stylelint-disable-next-line no-descending-specificity */
    .hoverable-inner {
      color: $text-color-dark; // enabled
    }
  }

  &.blue {
    .hoverable.highlighted .hoverable-inner, .menu-item:hover {
      background-color: $dark-blue;
    }
  }

  &.purple {
    .hoverable.highlighted .hoverable-inner, .menu-item:hover {
      background-color: $dark-purple;
    }
  }

  &.pink {
    .hoverable.highlighted .hoverable-inner, .menu-item:hover {
      background-color: $dark-pink;
    }
  }

  &.red {
    .hoverable.highlighted .hoverable-inner, .menu-item:hover {
      background-color: $dark-red;
    }
  }

  &.orange {
    .hoverable.highlighted .hoverable-inner, .menu-item:hover {
      background-color: $dark-orange;
    }
  }

  &.yellow {
    .hoverable.highlighted .hoverable-inner, .menu-item:hover {
      background-color: $dark-yellow;
    }
  }

  &.green {
    .hoverable.highlighted .hoverable-inner, .menu-item:hover {
      background-color: $dark-green;
    }
  }

  &.graphite {
    .hoverable.highlighted .hoverable-inner, .menu-item:hover {
      background-color: $dark-graphite;
    }
  }

  .hoverables .divider {
    .divider-side {
      background-color: $panel-color-dark;
    }

    /* stylelint-disable-next-line no-descending-specificity */
    .divider-middle {
      background-color: $vertical-border-color-dark;
    }
  }

  .hoverables.horizontal-scroll .divider .divider-middle {
    background-color: $panel-color-dark;
  }
}

.macos.light, .macos.dark {
  .highlighted {
    .text, .label, .comment {
      color: white;
    }
  }
}

